refactor: simplify metadata admission ownership